--- a/index.html
+++ b/index.html
@@ -1,72 +1,267 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Калькулятор рассрочки</title>
-  <style>
-    * { box-sizing: border-box; }
-    body { font-family: Arial, sans-serif; background: #f5f6f8; margin: 0; padding: 20px; overflow-x: hidden; }
-    
-    /* ---------- ШАПКА ---------- */
-    .header { background: white; padding: 15px; border-radius: 6px; box-shadow: 0 2px 6px rgba(0,0,0,.1); margin-bottom: 20px; text-align: center; }
-    .logo { font-size: 28px; font-weight: bold; letter-spacing: 1px; }
-    .logo .green { color: #2e7d32; }
-    .logo .black { color: #000; }
-    .manager-panel { margin-top: 8px; font-size: 14px; color: #555; border-top: 1px solid #eee; padding-top: 8px; }
-    
-    /* ---------- КАЛЬКУЛЯТОРЫ ---------- */
-    .wrapper { display: flex; gap: 20px; flex-wrap: wrap; width: 100%; }
-    .calculator { background: #fff; border-radius: 6px; padding: 20px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); flex: 1 1 300px; width: 100%; }
-    .title { font-size: 20px; font-weight: bold; }
-    .subtitle { color: #d32f2f; font-weight: bold; margin-bottom: 15px; }
-    .hint { margin-bottom: 10px; color: #555; }
-    .input { width: 100%; padding: 10px; font-size: 16px; margin-bottom: 15px; border: 1px solid #ccc; border-radius: 4px; }
-    .btn { width: 100%; color: white; padding: 12px; font-size: 16px; border: none; border-radius: 4px; cursor: pointer; margin-bottom: 20px; transition: .2s; }
-    .btn:hover { opacity: .9; }
-    .btn:active { transform: scale(.98); }
-    .btn-calc { background: linear-gradient(to right, #1976d2, #0d47a1); }
-    .btn-non-cash { background: linear-gradient(to right, #43a047, #2e7d32); }
-    .btn-close-shift { background: linear-gradient(to right, #f57c00, #e65100); }
-    .btn-discount { background: linear-gradient(to right, #8e24aa, #6a1b9a); }
-    table { width: 100%; border-collapse: collapse; font-size: 14px; }
-    th { text-align: left; padding-bottom: 8px; border-bottom: 1px solid #ddd; }
-    td { padding: 10px 0; border-bottom: 1px solid #eee; }
-    .coef { color: #555; }
-    .result { font-weight: bold; }
-    .bottom-buttons { width: 100%; margin-top: 20px; display: flex; gap: 20px; flex-wrap: wrap; }
-    .bottom-buttons .btn { flex: 1 1 250px; }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Калькулятор рассрочки</title>
+<style>
+*{box-sizing:border-box;}
+body{font-family: Arial, sans-serif;background:#f5f6f8;margin:0;padding:20px;overflow-x:hidden;}
+/* ---------- ШАПКА ---------- */
+.header{background:white;padding:15px;border-radius:6px;box-shadow:0 2px 6px rgba(0,0,0,.1);margin-bottom:20px;text-align:center;}
+.logo{font-size:28px;font-weight:bold;letter-spacing:1px;}
+.logo .green{color:#2e7d32;}
+.logo .black{color:#000;}
+.manager-panel{margin-top:8px;font-size:14px;color:#555;border-top:1px solid #eee;padding-top:8px;}
+/* ---------- КАЛЬКУЛЯТОРЫ ---------- */
+.wrapper{display:flex;gap:20px;flex-wrap:wrap;width:100%;}
+.calculator{background:#fff;border-radius:6px;padding:20px;box-shadow:0 2px 6px rgba(0,0,0,0.1);flex:1 1 300px;width:100%;}
+.title{font-size:20px;font-weight:bold;}
+.subtitle{color:#d32f2f;font-weight:bold;margin-bottom:15px;}
+.hint{margin-bottom:10px;color:#555;}
+.input{width:100%;padding:10px;font-size:16px;margin-bottom:15px;border:1px solid #ccc;border-radius:4px;}
+.btn{width:100%;color:white;padding:12px;font-size:16px;border:none;border-radius:4px;cursor:pointer;margin-bottom:20px;transition:.2s;}
+.btn:hover{opacity:.9;}
+.btn:active{transform:scale(.98);}
 
-    @media (max-width: 768px) {
-      body { padding: 10px; }
-      .wrapper { gap: 12px; }
-      .calculator { width: 100%; padding: 15px; }
-      .logo { font-size: 24px; }
-      .title { font-size: 18px; }
-      table { font-size: 13px; }
-      .btn { padding: 10px; font-size: 15px; }
+/* ---------- LOGIN ---------- */
+.login-screen{position:fixed;top:0;left:0;width:100%;height:100vh;background:linear-gradient(135deg,#1b5e20,#000);display:flex;justify-content:center;align-items:center;padding:20px;z-index:9999;}
+.login-box{background:white;padding:30px 25px;border-radius:14px;width:100%;max-width:400px;text-align:center;box-shadow:0 20px 50px rgba(0,0,0,.4);animation:fadeIn .4s ease;}
+.login-logo{font-size:30px;font-weight:bold;margin-bottom:10px;}
+.login-subtitle{color:#555;margin-bottom:15px;}
+select,input[type="password"],#adminMessage{width:100%;padding:12px;font-size:16px;border:1px solid #ccc;border-radius:6px;margin-bottom:15px;}
+.login-btn{width:100%;padding:12px;font-size:16px;border:none;border-radius:6px;cursor:pointer;color:white;background:linear-gradient(to right,#43a047,#1b5e20);}
+.error-msg{color:#d32f2f;font-size:14px;margin-top:8px;}
+@keyframes fadeIn{from{opacity:0;transform:translateY(10px);}to{opacity:1;transform:translateY(0);}}
+/* ---------- SIDE MENU ---------- */
+.menu-toggle{position:fixed;top:20px;left:20px;width:45px;height:45px;background:linear-gradient(135deg,#2e7d32,#1b5e20);color:white;display:flex;align-items:center;justify-content:center;border-radius:12px;cursor:pointer;z-index:3000;box-shadow:0 6px 20px rgba(0,0,0,.3);transition:.3s;}
+.menu-toggle:hover{transform:scale(1.1);}
+.side-menu{position:fixed;top:0;left:-320px;width:300px;height:100%;background:rgba(20,20,20,.95);backdrop-filter:blur(12px);color:white;padding:80px 20px 20px 20px;transition:.4s cubic-bezier(.77,0,.18,1);z-index:2500;box-shadow:10px 0 40px rgba(0,0,0,.5);}
+.side-menu.active{left:0;}
+.user-name{font-size:20px;font-weight:bold;margin-bottom:15px;color:#43a047;}
+.session-time{margin-bottom:15px;padding:6px 12px;background:rgba(255,255,255,0.08);border-radius:8px;font-size:12px;color:#ccc;text-align:center;opacity:0.7;transition:opacity .3s;}
+.session-time:hover{opacity:1;}
+#workingDayTimer{margin-bottom:25px;padding:15px;background:linear-gradient(135deg,#2e7d32,#1b5e20);border-radius:12px;font-size:18px;font-weight:bold;text-align:center;color:white;box-shadow:0 0 15px rgba(46,125,50,0.7);animation:pulse 2s infinite;}
+@keyframes pulse{0%{box-shadow:0 0 15px rgba(46,125,50,0.5);}50%{box-shadow:0 0 25px rgba(46,125,50,0.9);}100%{box-shadow:0 0 15px rgba(46,125,50,0.5);}}
+.menu-btn{width:100%;padding:12px;margin-bottom:12px;border:none;border-radius:8px;cursor:pointer;color:white;font-size:14px;transition:.3s;background:linear-gradient(to right,#333,#222);}
+.menu-btn:hover{transform:translateX(6px);background:linear-gradient(to right,#43a047,#1b5e20);}
+.logout-btn{background:linear-gradient(to right,#c62828,#8e0000);}
+
+/* ===== ЧАТ-ОКНО ===== */
+#chatWindow{position:fixed;bottom:20px;right:20px;width:300px;height:400px;background:rgba(0,0,0,0.9);border-radius:12px;box-shadow:0 10px 30px rgba(0,0,0,0.5);display:flex;flex-direction:column;overflow:hidden;z-index:5000;}
+#chatHeader{background:linear-gradient(135deg,#2e7d32,#1b5e20);padding:12px;color:white;font-weight:bold;cursor:pointer;display:flex;justify-content:space-between;align-items:center;}
+#chatClose{cursor:pointer;font-weight:bold;}
+#chatMessages{flex:1;padding:10px;overflow-y:auto;color:white;font-size:14px;background:rgba(0,0,0,0.7);}
+#chatInputArea{display:flex;padding:10px;background:rgba(0,0,0,0.8);}
+#chatInput{flex:1;padding:8px;border-radius:6px;border:none;font-size:14px;}
+#chatSend{margin-left:6px;padding:8px 12px;border:none;border-radius:6px;background:linear-gradient(135deg,#43a047,#1b5e20);color:white;cursor:pointer;}
+</style>
+</head>
+<body>
+
+<!-- LOGIN SCREEN -->
+<div id="loginScreen" class="login-screen">
+  <div class="login-box">
+    <div class="login-logo"><span class="green">A</span><span class="black">uto-</span><span class="green">S</span><span class="black">tyle</span></div>
+    <div class="login-subtitle">Выберите пользователя</div>
+    <select id="userSelect">
+      <option value="cashier">Кассир</option>
+      <option value="evgeniy">Евгений</option>
+      <option value="vadim">Вадим (Администратор)</option>
+    </select>
+    <input type="password" id="passwordInput" placeholder="Введите пароль">
+    <button id="loginBtn" class="login-btn">ВОЙТИ</button>
+    <div id="errorMsg" class="error-msg"></div>
+  </div>
+</div>
+
+<!-- SIDE MENU -->
+<div class="menu-toggle" onclick="toggleMenu()">☰</div>
+<div id="sideMenu" class="side-menu">
+  <div class="user-name" id="currentUser"></div>
+  <div class="session-time">Сессия истекает через: <div id="timeLeft"></div></div>
+  <div id="workingDayTimer" style="display:none;">Осталось времени до конца рабочего дня: <div id="timeToEndOfDay"></div></div>
+  <div id="notificationArea">
+    <button class="menu-btn notification" id="notifBtn" onclick="readNotification()">Уведомления
+      <span class="badge" id="notifBadge">1</span>
+    </button>
+    <div id="notifText" style="margin-bottom:15px;display:none;background:#333;padding:10px;border-radius:6px;color:white;"></div>
+  </div>
+  <div id="adminNotification" style="display:none;">
+    <input type="text" id="adminMessage" placeholder="Введите текст уведомления">
+    <select id="receiverSelect">
+      <option value="cashier">Кассиру</option>
+      <option value="evgeniy">Евгению</option>
+    </select>
+    <button class="menu-btn" onclick="sendNotification()">Отправить уведомление</button>
+  </div>
+  <button class="menu-btn" onclick="location.href='beznal.html'">ОФОРМИТЬ БЕЗНАЛ</button>
+  <button class="menu-btn" onclick="location.href='smena.html'">ЗАКРЫТИЕ СМЕНЫ</button>
+  <button class="menu-btn" onclick="location.href='discount.html'">СКИДОЧНАЯ КАРТА</button>
+  <button class="menu-btn" onclick="location.href='pass.html'">ПАРОЛИ</button>
+  <button class="menu-btn logout-btn" onclick="logout()">ВЫЙТИ</button>
+</div>
+
+<!-- HEADER -->
+<div class="header">
+  <div class="logo"><span class="green">A</span><span class="black">uto-</span><span class="green">S</span><span class="black">tyle</span></div>
+  <div class="manager-panel">Панель менеджера</div>
+</div>
+
+<!-- CALCULATORS -->
+<div class="wrapper">
+  <!-- калькуляторы оставлены без изменений, вставьте свой HTML калькуляторов сюда -->
+</div>
+
+<!-- BOTTOM BUTTONS -->
+<div class="bottom-buttons">
+  <button id="btnBeznal" class="btn btn-non-cash">ОФОРМИТЬ БЕЗНАЛ</button>
+  <button id="btnSmena" class="btn btn-close-shift">ЗАКРЫТИЕ СМЕНЫ</button>
+  <button id="btnDiscount" class="btn btn-discount">РЕГИСТРАЦИЯ СКИДОЧНОЙ КАРТЫ</button>
+</div>
+
+<!-- ===== ЧАТ-ОКНО ===== -->
+<div id="chatWindow">
+  <div id="chatHeader">
+    Уведомления
+    <span id="chatClose">✕</span>
+  </div>
+  <div id="chatMessages"></div>
+  <div id="chatInputArea">
+    <input type="text" id="chatInput" placeholder="Введите сообщение...">
+    <button id="chatSend">Отправить</button>
+  </div>
+</div>
+
+<script>
+// Функции работы с сессией и входом
+const users = {cashier: {name: "Кассир", pass: "2012"}, evgeniy: {name: "Евгений", pass: "0186"}, vadim: {name: "Вадим", pass: "2385"}};
+let currentUser = "", sessionTimer;
+
+// Вход с паролем
+document.getElementById("loginBtn").onclick = function () {
+  const userKey = document.getElementById("userSelect").value;
+  const pass = document.getElementById("passwordInput").value;
+  if (pass === users[userKey].pass) {
+    const expire = Date.now() + 24 * 60 * 60 * 1000; // 1 день
+    localStorage.setItem("session", JSON.stringify({user: userKey, expire}));
+    startSession(userKey, expire);
+  } else {
+    document.getElementById("errorMsg").textContent = "Неверный пароль";
+  }
+};
+
+// При загрузке страницы проверяем, есть ли активная сессия
+window.addEventListener("load", () => {
+  const saved = localStorage.getItem("session");
+  if (saved) {
+    const data = JSON.parse(saved);
+    if (Date.now() < data.expire) {
+      startSession(data.user, data.expire);
     }
+  }
+});
 
-    /* ---------- LOGIN ---------- */
-    .login-screen { position: fixed; top: 0; left: 0; width: 100%; height: 100vh; background: linear-gradient(135deg, #1b5e20, #000); display: flex; justify-content: center; align-items: center; padding: 20px; z-index: 9999; }
-    .login-box { background: white; padding: 30px 25px; border-radius: 14px; width: 100%; max-width: 400px; text-align: center; box-shadow: 0 20px 50px rgba(0, 0, 0, .4); animation: fadeIn .4s ease; }
-    .login-logo { font-size: 30px; font-weight: bold; margin-bottom: 10px; }
-    .login-subtitle { color: #555; margin-bottom: 15px; }
-    select, input[type="password"], #adminMessage { width: 100%; padding: 12px; font-size: 16px; border: 1px solid #ccc; border-radius: 6px; margin-bottom: 15px; }
-    .login-btn { width: 100%; padding: 12px; font-size: 16px; border: none; border-radius: 6px; cursor: pointer; color: white; background: linear-gradient(to right, #43a047, #1b5e20); }
-    .error-msg { color: #d32f2f; font-size: 14px; margin-top: 8px; }
-    @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+// Начало сессии
+function startSession(userKey, expire) {
+  currentUser = userKey;
+  document.getElementById("loginScreen").style.display = "none";
+  document.getElementById("currentUser").textContent = "👤 " + users[userKey].name;
+  updateTimer(expire);
+  sessionTimer = setInterval(() => updateTimer(expire), 1000);
+  if (userKey === "vadim") document.getElementById("adminNotification").style.display = "block";
+  if (userKey === "cashier") document.getElementById("workingDayTimer").style.display = "block";
+  setInterval(updateWorkingDay, 1000);
+  loadChat();
+}
 
-    /* ---------- SIDE MENU ---------- */
-    .menu-toggle { position: fixed; top: 20px; left: 20px; width: 45px; height: 45px; background: linear-gradient(135deg, #2e7d32, #1b5e20); color: white; display: flex; align-items: center; justify-content: center; border-radius: 12px; cursor: pointer; z-index: 3000; box-shadow: 0 6px 20px rgba(0, 0, 0, .3); transition: .3s; }
-    .menu-toggle:hover { transform: scale(1.1); }
-    .side-menu { position: fixed; top: 0; left: -320px; width: 300px; height: 100%; background: rgba(20, 20, 20, .95); backdrop-filter: blur(12px); color: white; padding: 80px 20px 20px 20px; transition: .4s cubic-bezier(.77, 0, .18, 1); z-index: 2500; box-shadow: 10px 0 40px rgba(0, 0, 0, .5); }
-    .side-menu.active { left: 0; }
-    .user-name { font-size: 20px; font-weight: bold; margin-bottom: 15px; color: #43a047; }
-    .session-time { margin-bottom: 15px; padding: 6px 12px; background: rgba(255, 255, 255, 0.08); border-radius: 8px; font-size: 12px; color: #ccc; text-align: center; opacity: 0.7; transition: opacity .3s; }
-    .session-time:hover { opacity: 1; }
-    #workingDayTimer { margin-bottom: 25px; padding: 15px; background: linear-gradient(135deg, #2e7d32, #1b5e20); border-radius: 12px; font-size: 18px; font-weight: bold; text-align: center; color: white; box-shadow: 0 0 15px rgba(46, 125, 50, 0.7); animation: pulse 2s infinite; }
-    @keyframes pulse { 0% { box-shadow: 0 0 15px rgba(46, 125, 50, 0.5); } 50% { box-shadow: 0 0 25px rgba(46, 125, 50, 0.9); } 100% { box-shadow: 0 0 15px rgba(46, 125, 50, 0.5); } }
-    .menu-btn { width: 100%; padding: 12px; margin-bottom: 12px; border: none; border-radius: 8px; cursor: pointer; color: white; font-size: 14px; transition: .3s; background: linear-gradient(to right, #333, #222); }
-    .menu-btn:hover { transform: translateX(6px); background: linear-gradient(to right, #43a047, #1b5e20); }
-    .logout-btn { background:
+function updateTimer(expire) {
+  const diff = expire - Date.now();
+  if (diff <= 0) logout();
+  const h = Math.floor(diff / 1000 / 60 / 60);
+  const m = Math.floor((diff / 1000 / 60) % 60);
+  const s = Math.floor((diff / 1000) % 60);
+  document.getElementById("timeLeft").textContent = `${h}ч ${m}м ${s}с`;
+}
+
+function logout() {
+  localStorage.removeItem("session");
+  clearInterval(sessionTimer);
+  location.reload();
+}
+
+// Чат
+const chatWindow = document.getElementById("chatWindow");
+const chatHeader = document.getElementById("chatHeader");
+const chatClose = document.getElementById("chatClose");
+const chatMessages = document.getElementById("chatMessages");
+const chatInput = document.getElementById("chatInput");
+const chatSend = document.getElementById("chatSend");
+let chatVisible = true;
+const chatHistoryKey = "chatHistory";
+
+chatClose.onclick = () => {
+  chatWindow.style.display = "none";
+  chatVisible = false;
+};
+
+chatHeader.onclick = () => {
+  chatWindow.style.display = "flex";
+  chatVisible = true;
+  chatMessages.scrollTop = chatMessages.scrollHeight;
+};
+
+chatSend.onclick = () => {
+  const text = chatInput.value.trim();
+  if (!text) return;
+  if (currentUser !== "vadim") return alert("Только администратор может отправлять сообщения");
+  addMessageToDOM(users[currentUser].name, text);
+  saveMessage(users[currentUser].name, text);
+  chatInput.value = "";
+};
+
+function loadChat() {
+  const chatHistory = localStorage.getItem(chatHistoryKey);
+  if (chatHistory) {
+    const messages = JSON.parse(chatHistory);
+    messages.forEach(msg => addMessageToDOM(msg.user, msg.text));
+  }
+}
+
+function saveMessage(user, text) {
+  const messages = JSON.parse(localStorage.getItem(chatHistoryKey) || "[]");
+  messages.push({user, text});
+  localStorage.setItem(chatHistoryKey, JSON.stringify(messages));
+}
+
+function addMessageToDOM(user, text) {
+  const messageDiv = document.createElement("div");
+  messageDiv.textContent = `${user}: ${text}`;
+  chatMessages.appendChild(messageDiv);
+  chatMessages.scrollTop = chatMessages.scrollHeight;
+}
+
+// Отправка уведомлений
+function sendNotification() {
+  const msg = document.getElementById('adminMessage').value.trim();
+  if (!msg) return alert("Введите текст уведомления");
+  const receiver = document.getElementById('receiverSelect').value;
+  localStorage.setItem(receiver + "_notif", msg);
+  document.getElementById('adminMessage').value = "";
+  loadChat();
+  alert("Уведомление отправлено!");
+}
+
+function readNotification() {
+  const notifKey = currentUser + "_notif";
+  const msg = localStorage.getItem(notifKey);
+  if (msg) {
+    document.getElementById('notifText').style.display = 'block';
+    document.getElementById('notifBadge').style.display = 'none';
+    localStorage.removeItem(notifKey);
+  } else alert("Нет новых уведомлений");
+}
+
+</script>
+</body>
+</html>
