--- a/index.html
+++ b/index.html
@@ -2,232 +2,194 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Калькулятор</title>
-
+<title>Калькулятор рассрочки</title>
 <style>
-*{box-sizing:border-box}
-body{font-family:Arial;margin:0;background:#f5f6f8;padding:20px}
+    body {
+        font-family: Arial, sans-serif;
+        background: #f5f6f8;
+        margin: 0;
+        padding: 20px;
+    }
+    .wrapper {
+        display: flex;
+        gap: 20px;
+        justify-content: space-between;
+        flex-wrap: wrap; /* адаптация на узких экранах */
+    }
+    .calculator {
+        background: #ffffff;
+        border-radius: 6px;
+        padding: 20px;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 
-/* HEADER */
-.header{background:#fff;padding:15px;border-radius:6px;
-box-shadow:0 2px 6px rgba(0,0,0,.1);text-align:center;margin-bottom:20px}
-.logo{font-size:26px;font-weight:bold}
-.green{color:#2e7d32}
-.black{color:#000}
+        flex: 1;
+        min-width: 310px;
+    }
+    .title {
+        font-size: 20px;
+        font-weight: bold;
+    }
+    .subtitle {
+        color: #d32f2f;
+        font-weight: bold;
+        margin-bottom: 15px;
+    }
+    .hint {
+        margin-bottom: 10px;
+        color: #555;
+    }
+    .input {
+        width: 100%;
+        padding: 10px;
+        font-size: 16px;
+        margin-bottom: 15px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+    }
+    .btn {
+        width: 100%;
+        color: white;
+        padding: 12px;
+        font-size: 16px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        margin-bottom: 20px;
+        transition: all 0.2s ease;
+    }
+    .btn:hover {
+        opacity: 0.9;
+    }
+    .btn:active {
+        transform: scale(0.98);
+    }
+    /* Градиенты для кнопок расчета */
+    .btn-calc {
+        background: linear-gradient(to right, #1976d2, #0d47a1);
+    }
+    /* Новые кнопки под калькуляторами */
+    .btn-non-cash {
+        background: linear-gradient(to right, #43a047, #2e7d32);
+    }
+    .btn-close-shift {
+        background: linear-gradient(to right, #f57c00, #e65100);
+    }
 
-/* LOGIN */
-.login-screen{
-position:fixed;top:0;left:0;width:100%;height:100%;
-background:linear-gradient(135deg,#1b5e20,#000);
-display:flex;justify-content:center;align-items:center;z-index:9999}
-.login-box{
-background:#fff;padding:30px;border-radius:12px;
-width:100%;max-width:350px;text-align:center}
-.login-box input, .login-box select{
-width:100%;padding:10px;margin-bottom:10px;
-border:1px solid #ccc;border-radius:6px}
-.login-btn{
-width:100%;padding:10px;border:none;
-background:#2e7d32;color:white;border-radius:6px;cursor:pointer}
-.error{color:red;font-size:14px}
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        font-size: 14px;
+    }
+    th {
+        text-align: left;
+        padding-bottom: 8px;
+        border-bottom: 1px solid #ddd;
+    }
+    td {
+        padding: 10px 0;
+        border-bottom: 1px solid #eee;
+    }
+    .coef {
+        color: #555;
+    }
+    .result {
+        font-weight: bold;
+    }
 
-/* MENU */
-.menu-toggle{
-position:fixed;top:20px;left:20px;
-background:#2e7d32;color:white;
-width:45px;height:45px;border-radius:10px;
-display:flex;align-items:center;justify-content:center;
-cursor:pointer;z-index:2000}
-.side-menu{
-position:fixed;top:0;left:-280px;width:260px;height:100%;
-background:#111;color:white;padding:80px 20px;
-transition:.3s}
-.side-menu.active{left:0}
-.menu-btn{
-width:100%;padding:10px;margin-bottom:10px;
-border:none;border-radius:6px;background:#333;
-color:white;cursor:pointer}
-.logout-btn{background:#c62828}
-
-/* CALCULATOR */
-.wrapper{display:flex;gap:20px;flex-wrap:wrap}
-.calculator{
-background:white;padding:20px;border-radius:6px;
-box-shadow:0 2px 6px rgba(0,0,0,.1);flex:1}
-.input{width:100%;padding:8px;margin-bottom:10px}
-.btn{width:100%;padding:10px;background:#1976d2;
-color:white;border:none;border-radius:6px;cursor:pointer}
-
-/* CHAT */
-#chatToggle{
-position:fixed;bottom:20px;right:20px;
-background:#2e7d32;color:white;
-padding:12px 15px;border-radius:30px;
-cursor:pointer;z-index:3000}
-#chatWindow{
-position:fixed;bottom:80px;right:20px;
-width:300px;height:400px;
-background:#1c1c1c;border-radius:12px;
-display:none;flex-direction:column;
-overflow:hidden;z-index:3000}
-#chatHeader{
-background:#2e7d32;color:white;
-padding:10px;font-weight:bold}
-#chatMessages{
-flex:1;padding:10px;color:white;
-overflow-y:auto;font-size:14px}
-#chatInputArea{display:flex;padding:10px;background:#111}
-#chatInput{
-flex:1;padding:8px;border:none;border-radius:6px}
-#chatSend{
-margin-left:5px;padding:8px 10px;
-background:#2e7d32;color:white;border:none;border-radius:6px}
+    /* Контейнер для двух новых кнопок */
+    .bottom-buttons {
+        width: 100%;
+        margin-top: 20px;
+        display: flex;
+        gap: 20px;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .bottom-buttons .btn {
+        flex: 1;
+        min-width: 200px;
+    }
 </style>
 </head>
 <body>
 
-<!-- LOGIN -->
-<div id="loginScreen" class="login-screen">
-  <div class="login-box">
-    <h2>Вход</h2>
-    <select id="userSelect">
-      <option value="cashier">Кассир</option>
-      <option value="evgeniy">Евгений</option>
-      <option value="vadim">Вадим</option>
-    </select>
-    <input type="password" id="passwordInput" placeholder="Пароль">
-    <button class="login-btn" id="loginBtn">ВОЙТИ</button>
-    <div id="errorMsg" class="error"></div>
-  </div>
-</div>
-
-<!-- MENU -->
-<div class="menu-toggle" onclick="toggleMenu()">☰</div>
-<div id="sideMenu" class="side-menu">
-  <div id="currentUser"></div>
-  <button class="menu-btn" onclick="logout()">Выйти</button>
-</div>
-
-<!-- HEADER -->
-<div class="header">
-  <div class="logo"><span class="green">A</span><span class="black">uto-</span><span class="green">S</span><span class="black">tyle</span></div>
-</div>
-
-<!-- CALCULATORS -->
 <div class="wrapper">
-  <div class="calculator">
-    <h3>Калькулятор</h3>
-    <input type="number" id="sum" class="input" placeholder="Сумма">
-    <input type="number" id="months" class="input" placeholder="Месяцы">
-    <button class="btn" onclick="calc()">Рассчитать</button>
-    <div id="result"></div>
-  </div>
+
+    <!-- Калькулятор 1 – АГРОПРОМБАНК -->
+    <div class="calculator">
+        <div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
+        <div class="subtitle">АГРОПРОМБАНК</div>
+        <div class="hint">Введите общую сумму чека и нажмите рассчитать</div>
+        <input type="number" class="input sum">
+        <button class="btn btn-calc">РАССЧИТАТЬ</button>
+        <table>
+            <tr><th>РАССРОЧКА</th><th>КОЭФФ.</th><th>ИТОГО, руб</th></tr>
+            <tr><td>АПБ 3 мес.</td><td class="coef">0.955</td><td class="result"></td></tr>
+            <tr><td>АПБ 6 мес.</td><td class="coef">0.93</td><td class="result"></td></tr>
+            <tr><td>АПБ 9 мес.</td><td class="coef">0.90</td><td class="result"></td></tr>
+            <tr><td>АПБ 12 мес.</td><td class="coef">0.875</td><td class="result"></td></tr>
+        </table>
+    </div>
+
+    <!-- Калькулятор 2 – ЭКСИМБАНК -->
+    <div class="calculator">
+        <div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
+        <div class="subtitle">ЭКСИМБАНК</div>
+        <div class="hint">Введите общую сумму чека и нажмите рассчитать</div>
+        <input type="number" class="input sum">
+        <button class="btn btn-calc">РАССЧИТАТЬ</button>
+        <table>
+            <tr><th>РАССРОЧКА</th><th>КОЭФФ.</th><th>ИТОГО, руб</th></tr>
+            <tr><td>ЭксимБанк 3 мес.</td><td class="coef">0.955</td><td class="result"></td></tr>
+            <tr><td>ЭксимБанк 6 мес.</td><td class="coef">0.93</td><td class="result"></td></tr>
+            <tr><td>ЭксимБанк 9 мес.</td><td class="coef">0.90</td><td class="result"></td></tr>
+            <tr><td>ЭксимБанк 12 мес.</td><td class="coef">0.886</td><td class="result"></td></tr>
+        </table>
+    </div>
+
+    <!-- Калькулятор 3 – СБЕРБАНК -->
+    <div class="calculator">
+        <div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
+        <div class="subtitle">СБЕРБАНК</div>
+        <div class="hint">Введите общую сумму чека и нажмите рассчитать</div>
+        <input type="number" class="input sum">
+        <button class="btn btn-calc">РАССЧИТАТЬ</button>
+        <table>
+            <tr><th>РАССРОЧКА</th><th>КОЭФФ.</th><th>ИТОГО, руб</th></tr>
+            <tr><td>СберБанк 3 мес.</td><td class="coef">0.96</td><td class="result"></td></tr>
+            <tr><td>СберБанк 6 мес.</td><td class="coef">0.93</td><td class="result"></td></tr>
+            <tr><td>СберБанк 9 мес.</td><td class="coef">0.90</td><td class="result"></td></tr>
+            <tr><td>СберБанк 12 мес.</td><td class="coef">0.88</td><td class="result"></td></tr>
+        </table>
+    </div>
+
 </div>
 
-<!-- CHAT BUTTON -->
-<div id="chatToggle" onclick="toggleChat()">Чат</div>
-
-<!-- CHAT WINDOW -->
-<div id="chatWindow">
-  <div id="chatHeader">Чат</div>
-  <div id="chatMessages"></div>
-  <div id="chatInputArea">
-    <input type="text" id="chatInput">
-    <button id="chatSend">OK</button>
-  </div>
+<!-- Нижние кнопки -->
+<div class="bottom-buttons">
+    <button class="btn btn-non-cash">ОФОРМИТЬ БЕЗНАЛ</button>
+    <button class="btn btn-close-shift">ЗАКРЫТИЕ СМЕНЫ</button>
 </div>
 
 <script>
-const users={
-  cashier:{name:"Кассир",pass:"2012"},
-  evgeniy:{name:"Евгений",pass:"0186"},
-  vadim:{name:"Вадим",pass:"2385"}
-};
+document.querySelectorAll('.calculator').forEach(calc => {
+    const btn = calc.querySelector('.btn-calc');
+    btn.addEventListener('click', () => {
+        const sum = parseFloat(calc.querySelector('.sum').value);
+        if (isNaN(sum) || sum < 0) return;
+        const coefs = calc.querySelectorAll('td.coef');
+        const results = calc.querySelectorAll('td.result');
+        coefs.forEach((c, i) => {
+            results[i].textContent = (sum / parseFloat(c.textContent))
+                .toLocaleString('ru-RU', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
+        });
+    });
 
-let currentUser="";
-const chatKey="chatHistory";
-
-/* LOGIN */
-document.getElementById("loginBtn").onclick=function(){
-  const user=document.getElementById("userSelect").value;
-  const pass=document.getElementById("passwordInput").value;
-
-  if(pass===users[user].pass){
-    localStorage.setItem("session",user);
-    startSession(user);
-  }else{
-    document.getElementById("errorMsg").textContent="Неверный пароль";
-  }
-};
-
-window.onload=function(){
-  const saved=localStorage.getItem("session");
-  if(saved && users[saved]){
-    startSession(saved);
-  }
-};
-
-function startSession(user){
-  currentUser=user;
-  document.getElementById("loginScreen").style.display="none";
-  document.getElementById("currentUser").textContent="👤 "+users[user].name;
-
-  if(user!=="vadim"){
-    document.getElementById("chatInputArea").style.display="none";
-  }
-
-  loadChat();
-}
-
-function logout(){
-  localStorage.removeItem("session");
-  location.reload();
-}
-
-/* MENU */
-function toggleMenu(){
-  document.getElementById("sideMenu").classList.toggle("active");
-}
-
-/* CALC */
-function calc(){
-  const s=+document.getElementById("sum").value;
-  const m=+document.getElementById("months").value;
-  if(!s||!m)return;
-  document.getElementById("result").textContent=
-    "Платеж: "+(s/m).toFixed(2);
-}
-
-/* CHAT */
-function toggleChat(){
-  const w=document.getElementById("chatWindow");
-  w.style.display = w.style.display==="flex" ? "none" : "flex";
-}
-
-document.getElementById("chatSend").onclick=function(){
-  const text=document.getElementById("chatInput").value.trim();
-  if(!text)return;
-  if(currentUser!=="vadim")return;
-
-  const data=JSON.parse(localStorage.getItem(chatKey)||"[]");
-  data.push({user:users[currentUser].name,text});
-  localStorage.setItem(chatKey,JSON.stringify(data));
-  document.getElementById("chatInput").value="";
-  loadChat();
-};
-
-function loadChat(){
-  const box=document.getElementById("chatMessages");
-  box.innerHTML="";
-  const data=JSON.parse(localStorage.getItem(chatKey)||"[]");
-  data.forEach(m=>{
-    const d=document.createElement("div");
-    d.textContent=m.user+": "+m.text;
-    box.appendChild(d);
-  });
-  box.scrollTop=box.scrollHeight;
-}
+    // расчет при Enter
+    calc.querySelector('.sum').addEventListener('keydown', e => {
+        if (e.key === 'Enter') btn.click();
+    });
+});
 </script>
 
 </body>
